# WallStreetSheep

./: .gitignore  CMakeLists.txt  README.md  conf.yaml  config_example.yaml  docker-compose.yaml
core/common/: codec.cpp  data.hpp  log.cpp  log.hpp
core/ctp/encoding/: json.cpp  json.hpp
core/ctp/market/: CMakeLists.txt  Market.cpp  Market.hpp  conf.yaml  main.cpp
core/ctp/strategy/: IStrategy.cpp  IStrategy.hpp
core/ctp/strategy/example/: CMakeLists.txt  Example.cpp  Example.hpp  main.cpp
core/ctp/trade/: CMakeLists.txt  Trade.cpp  Trade.hpp  config.yaml  main.cpp
core/pg/: Postgres.hpp
ctp/: CMakeLists.txt  codec.hpp  log.cpp  main.cpp  market.cpp  market.hpp  thread.cpp  trade.cpp  trade.hpp
inc/WallStreetSheep/common/: codec.hpp  common.hpp  thread.hpp
inc/WallStreetSheep/convert/: codec.hpp
inc/WallStreetSheep/ctp/: ICtp.hpp  Market.hpp  Trade.hpp  utils.hpp
inc/WallStreetSheep/db/: Postgres.hpp
inc/WallStreetSheep/manager/: IManager.hpp  Manager.hpp  ManagerCtp.hpp
inc/WallStreetSheep/market/: IMarket.hpp  MarketCtp.hpp
inc/WallStreetSheep/strategy/: IStrategy.hpp
inc/WallStreetSheep/trade/: ITrade.hpp  TradeCtp.hpp
inc/alphamaker/common/: common.hpp
inc/alphamaker/db/: postgres.hpp
inc/alphamaker/market/: market.hpp  market_ctp.hpp
inc/alphamaker/trade/: trade.hpp  trade_ctp.hpp
inc/convert/: codec.hpp
inc/manager/: IManager.hpp  ManagerCtp.hpp
scripts/postgres/: ctp.sql
server/: conf.yaml  go.sum  main.go
server/api/: api.go  ctp.go  middleware.go
server/conf/: conf.go
server/daemon/: common.go  ctp.go  data.go  feishu.go
server/logger/: logger.go
server/model/: common.go  ctp.go
src/: main.cpp
src/common/: codec.cpp  common.cpp  log.cpp  log.hpp
src/context/: CtxBacktest.cpp  CtxBacktest.hpp  ICtx.cpp  ICtx.hpp
src/ctp/: ICtp.hpp  Market.cpp  Market.hpp  Trade.cpp  Trade.hpp  utils.cpp  utils.hpp
src/db/: Postgres.cpp  postgres.cpp
src/manager/: Manager.cpp  Manager.hpp  ManagerCtp.cpp
src/market/: MarketCtp.cpp  market_ctp.cpp
src/strategy/: CMakeLists.txt  Example.cpp  Example.hpp  IStrategy.cpp  IStrategy.hpp  factory.cpp
src/trade/: TradeCtp.cpp  trade_ctp.cpp
